--- a/css/hero.css
+++ b/css/hero.css
@@ -4,13 +4,11 @@
     max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
-     padding-top: 188px;
-     padding-bottom: 188px;
      text-align: center;
 
      background-image: linear-gradient(
-        rgba(46, 47, 66, 0.4),
-        rgba(46, 47, 66, 0.4)
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
      ),
      url('../images/hero.jpg');
 
@@ -45,6 +43,8 @@
     border: none;
     border-radius: 4px;
     margin: 0 auto;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
